Another collapse navbar css fix.

--- a/CmsWeb/src/less/navbar.less
+++ b/CmsWeb/src/less/navbar.less
@@ -34,7 +34,7 @@
 }
 
 @media (max-width: 767px) {
-    .collapsing, .in {
+    #navbar {
         background-color: #21252b !important;
     }
        
